Create english translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,31 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  header: "HEADER"
+  footer: "FOOTER"
+  hello: "Hello"
+  today_date: "Date"
+  environment: "Environment"
+  development: "Development"
+  production: "Production"
+  test: "Test"
+  links:
+    new: "New"
+    show: "Show"
+    edit: "Edit"
+    update: "Update"
+    delete: "Delete"
+    back: "Back"
+  coins: "Coins"
+  coin_attributes:
+    description: "Name"
+    acronym: "Acronym"
+    image: "Image"
+    mining_type: "Mining Type"
+  new_coin: "New coin"
+  editing_coin: "Editing coin"
+  mining_types: "Mining Types"
+  mining_types_attributes:
+    description: "Name"
+    acronym: "Acronym"
+    image: "Image"
+  new_mining_type: "New mining type"
+  editing_coin: "Editing mining type"
