--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,32 +1,8 @@
 en:
-  header: "HEADER"
-  footer: "FOOTER"
   hello: "Hello"
-  today_date: "Date"
-  environment: "Environment"
-  development: "Development"
-  production: "Production"
-  test: "Test"
   actual_locale: "English US"
-  links:
-    new: "New"
-    show: "Show"
-    edit: "Edit"
-    update: "Update"
-    delete: "Delete"
-    back: "Back"
-  coins: "Coins"
-  coin_attributes:
-    description: "Name"
-    acronym: "Acronym"
-    image: "Image"
-    mining_type: "Mining Type"
-  new_coin: "New coin"
-  editing_coin: "Editing coin"
-  mining_types: "Mining Types"
-  mining_types_attributes:
-    description: "Name"
-    acronym: "Acronym"
-    image: "Image"
-  new_mining_type: "New mining type"
-  editing_coin: "Editing mining type"
+activerecord:
+  models:
+    coin:
+      one: "Coin"
+      other: "Coins"
