Update coin translation

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -11,8 +11,8 @@ pt-BR:
   activerecord:
     models:
       coin:
-        one: Moeda
-        other: Moedas
+        one: "Moeda"
+        other: "Moedas"
     attributes:
       coin:
         description: "Nome"
